objects/LAT_Notification__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>México</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Group_Id__c</fullName>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Group__c</fullName>
        <formula>HYPERLINK(&apos;setup/own/groupdetail.jsp?id=&apos; +  LAT_Group_Id__c + &apos;&amp;setupid=PublicGroups&apos;,  LAT_Group_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Notification_Detail__c</fullName>
        <label>Notification Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAT_Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Template_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Notification</label>
        <referenceTo>LAT_Notification__c</referenceTo>
        <relationshipLabel>LAT_Notification</relationshipLabel>
        <relationshipName>LAT_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LAT_Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_Group_Id__c</columns>
        <columns>LAT_Group_Name__c</columns>
        <columns>LAT_Active__c</columns>
        <columns>LAT_Country__c</columns>
        <columns>LAT_End_Date__c</columns>
        <columns>LAT_Read__c</columns>
        <columns>LAT_Notification_Detail__c</columns>
        <columns>LAT_Start_Date__c</columns>
        <columns>LAT_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LAT_Templates</fullName>
        <columns>NAME</columns>
        <columns>LAT_Country__c</columns>
        <columns>LAT_Start_Date__c</columns>
        <columns>LAT_End_Date__c</columns>
        <columns>LAT_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Notification__c.LAT_Template</value>
        </filters>
        <label>Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>LAT_Notification Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT_Notification</pluralLabel>
    <recordTypes>
        <fullName>LAT_Entry</fullName>
        <active>true</active>
        <label>Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>